--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
                 </div>
 
                 <div class="form__item">
-                    <div class="form__item__label">Наличие ВПЧ 18 типа</div>
+                    <div class="form__item__label">ДНК ВПЧ 18 типа</div>
                     <div class="form__item__enter form__item__enter_checkbox">
                         <div class="radio__wrapper">
                             <input type="radio" id="x_18_y" name="x_18" value="1">
-                            <label for="x_18_y" class="radio_18_type">+</label>
+                            <label for="x_18_y" class="">обнаружено</label>
                         </div>
                         <div class="radio__wrapper">
                             <input type="radio" id="x_18_n" name="x_18" value="0">
-                            <label for="x_18_n" class="radio_18_type">-</label>
+                            <label for="x_18_n" class="">не обнаружено</label>
                         </div>
                     </div>
                 </div>
@@ -106,10 +106,7 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div id="modal__body" class="modal-body modal__body">
-                            <div class="text">
-                            </div>
-                        </div>
+                        <div class="result_descr"></div>
                         <div class="result">
                             <div class="green_zone">Низкий риск наличия HSIL</div>
                             <div class="red_zone">Высокий риск наличия HSIL</div>
@@ -134,7 +131,10 @@
                                 <div class="result_legend_descr">результат</div>
                             </div>
                         </div>
-                        <div class="result_descr"></div>
+                        <div id="modal__body" class="modal-body modal__body">
+                            <div class="text">
+                            </div>
+                        </div>
                         <div class="modal__footer">
                             <button type="button" class="btn btn_close modal__btn-close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">Закрыть</span></button>
                         </div>
